--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
    
             <header id="hero" class="hero">
                 <h1>Welcome to My Portfolio</h1>
-                <p>Discover my work and creativity!</p>
+                <p>Hi I'm Kyle! Welcome to my Photography Portfolio</p>
             </header>
 
           
             <section id="about-section">
                 <h2>About Me</h2>
-                <p>Kyle Nieva, Founder and CEO of KNVA Creatives, is a Bachelor of Science in Multimedia Arts student at FEU Institute of Technology with a dedication to creating engaging, visually captivating content for individuals and businesses. His portfolio showcases a broad range of expertise, from films and music videos to photography and other digital media projects, each designed to reflect and elevate clients' unique visions. 
+                <p>Kyle Nieva, Founder and CEO of KNVA Creatives, is a Bachelor of Science in Multimedia Arts student at FEU Institute of Technology with a dedication to creating engaging, visually captivating content for individuals and businesses. His portfolio showcases a broad range of expertise, from films and music videos to photography and other digital media projects, each designed to reflect and elevate clients' unique visions.  
 
                 </p>
             </section>
