--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           
             <section id="about-section">
                 <h2>About Me</h2>
-                <p>Kyle Nieva, Founder and CEO of KNVA Creatives, is a Bachelor of Science in Multimedia Arts student at FEU Institute of Technology with a dedication to creating engaging, visually captivating content for individuals and businesses. His portfolio showcases a broad range of expertise, from films and music videos to photography and other digital media projects, each designed to reflect and elevate clients' unique visions.  
+                <p>Kyle Nieva, Founder and CEO of KNVA Creatives, is a Bachelor of Science in Multimedia Arts student at FEU Institute of Technology with a dedication to creating engaging, visually captivating content for individuals and businesses. His portfolio showcases a broad range of expertise, from films and music videos to photography and other digital media projects, each designed to reflect and elevate clients' unique visions. This team-driven approach ensures that each member’s strengths are fully utilized, allowing KNVA Creatives to consistently deliver high-quality, memorable visuals. Outside his work in digital media, Kyle finds inspiration in photography and travel, always seeking new perspectives and opportunities for growth. Through KNVA Creatives, he aims to bring every idea to life with a commitment to artistry and client satisfaction.  
 
                 </p>
             </section>
